--- a/Styles.css
+++ b/Styles.css
@@ -8,8 +8,9 @@ input.empty {
     font-style: normal;
     font-weight: normal;
     text-decoration: inherit;
-    width: 40%;
-    min-width: 400px;
+    width: 100%;
+    min-width: 310px;
+    max-width: 40%;
     line-height: 20px;
     border-radius: 30px;
     border: 1px solid rgb(202, 202, 202);
@@ -72,11 +73,15 @@ main{
 button{
     border: none;
     padding: 15px;
+    margin: 10px;
     letter-spacing: 1px;
 }
 .div1{
-    width: 40%;
-    min-width: 400px;
+    display: flex;
+    width: 100%;
+    min-width: 330px;
+    max-width: 40%;
+    justify-content: space-evenly;
 }
 div{
     display: flex;
@@ -94,8 +99,10 @@ footer{
     bottom: 0;
     display: flex;
     width: 100%;
-    height: 13vh;
+    height: 10vh;
     align-items: center;
     justify-content: space-evenly;
     background-color: lightgray;
+    padding: 0;
+    margin: 0;
 }
